header fix(z-index)

--- a/code-buddy/scss/styles.scss
+++ b/code-buddy/scss/styles.scss
@@ -5,7 +5,6 @@
 @import "mixins";
 @import "ico-font";
 
-
 html{
 	min-height: 100%;
 }
@@ -81,7 +80,6 @@ h3, .h3{
 	text-align:center;
 	color:#45a60b;
 }
-
 .flex{
     @include flex();
 }
@@ -90,7 +88,7 @@ h3, .h3{
 	position:fixed;
 	left:0;
 	top:-100px;
-	bottom:0;
+	bottom:-100px;
 	right:0;
 	z-index:2;
 	background:rgba(0,0,0,.3);
@@ -118,7 +116,6 @@ h3, .h3{
 		color:#ff0000;
 	}
 }
-
 .purple{
 	background-color: #291c27;
 	@include filter-gradient(#291c27, #231821, vertical);
